// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Feed component renders correctly while loading 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#27DA86",
      "flex": 1,
      "justifyContent": "center",
      "paddingTop": 20,
    }
  }
>
  <RCTScrollView
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={true}
      />
    }
  >
    <RCTRefreshControl />
    <View />
  </RCTScrollView>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#ffffff",
        "marginBottom": 5,
        "opacity": 0.85,
        "textAlign": "center",
      }
    }
  >
    by Applicaster
  </Text>
</View>
`;

exports[`Feed component renders correctly while loading with events 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#27DA86",
      "flex": 1,
      "justifyContent": "center",
      "paddingTop": 20,
    }
  }
>
  <RCTScrollView
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={true}
      />
    }
  >
    <RCTRefreshControl />
    <View>
      <View>
        <Image
          source={
            Object {
              "uri": "url",
            }
          }
          style={
            Object {
              "height": 360,
              "width": 360,
            }
          }
        />
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
        />
      </View>
      <View>
        <Image
          source={
            Object {
              "uri": "url",
            }
          }
          style={
            Object {
              "height": 360,
              "width": 360,
            }
          }
        />
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
        />
      </View>
    </View>
  </RCTScrollView>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#ffffff",
        "marginBottom": 5,
        "opacity": 0.85,
        "textAlign": "center",
      }
    }
  >
    by Applicaster
  </Text>
</View>
`;

exports[`Feed component renders correctly with events 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#27DA86",
      "flex": 1,
      "justifyContent": "center",
      "paddingTop": 20,
    }
  }
>
  <RCTScrollView
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={false}
      />
    }
  >
    <RCTRefreshControl />
    <View>
      <View>
        <Image
          source={
            Object {
              "uri": "url",
            }
          }
          style={
            Object {
              "height": 360,
              "width": 360,
            }
          }
        />
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
        />
      </View>
      <View>
        <Image
          source={
            Object {
              "uri": "url",
            }
          }
          style={
            Object {
              "height": 360,
              "width": 360,
            }
          }
        />
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
        />
      </View>
    </View>
  </RCTScrollView>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#ffffff",
        "marginBottom": 5,
        "opacity": 0.85,
        "textAlign": "center",
      }
    }
  >
    by Applicaster
  </Text>
</View>
`;

exports[`Feed component renders correctly without events 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#27DA86",
      "flex": 1,
      "justifyContent": "center",
      "paddingTop": 20,
    }
  }
>
  <RCTScrollView
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={false}
      />
    }
  >
    <RCTRefreshControl />
    <View />
  </RCTScrollView>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#ffffff",
        "marginBottom": 5,
        "opacity": 0.85,
        "textAlign": "center",
      }
    }
  >
    by Applicaster
  </Text>
</View>
`;
